--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
@@ -21,4 +22,3 @@
     "nodemailer": "^7.0.12"
   }
 }
-
