--- a/my-app/app.json
+++ b/my-app/app.json
@@ -8,7 +8,8 @@
     "userInterfaceStyle": "automatic",
 
     "extra": {
-      "API_URL": "http://192.168.1.12:3000/api"
+      "API_URL": "http://192.168.1.12:3000/api",
+      "BASE_URL": "http://192.168.1.12:3000"
     },
 
     "ios": {
